[gd_scene load_steps=153 format=2]

[ext_resource path="res://scenes/Player/images/RED_HOOD/parts/red hood itch free_jump.png" type="Texture" id=1]
[ext_resource path="res://scenes/Player/images/RED_HOOD/parts/red hood itch free_slide.png" type="Texture" id=2]
[ext_resource path="res://scenes/Player/audios/jump-landing-wood-01.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/Player/audios/565894__dundalkkirk__softsurfacerun.wav" type="AudioStream" id=4]
[ext_resource path="res://scenes/Player/audios/253548__xtrgamr__archery.wav" type="AudioStream" id=5]
[ext_resource path="res://scenes/Player/images/RED_HOOD/parts/red hood itch free_atac2.png" type="Texture" id=6]
[ext_resource path="res://scenes/Player/images/RED_HOOD/parts/red hood itch free_archery.png" type="Texture" id=7]
[ext_resource path="res://scenes/Player/images/RED_HOOD/parts/red hood itch free_atack.png" type="Texture" id=8]
[ext_resource path="res://scenes/Player/images/RED_HOOD/parts/red hood idle sheet-Sheet.png" type="Texture" id=9]
[ext_resource path="res://scenes/Player/images/RED_HOOD/parts/red hood itch free_run.png" type="Texture" id=10]
[ext_resource path="res://scenes/Player/audios/sliding6.ogg" type="AudioStream" id=11]
[ext_resource path="res://scenes/Player/audios/263018__dermotte__sword-03.wav" type="AudioStream" id=12]
[ext_resource path="res://scenes/Player/audios/547600__saviraz__sword-attack.wav" type="AudioStream" id=13]
[ext_resource path="res://scenes/Player/images/RED_HOOD/parts/red hood itch free_heart.png" type="Texture" id=14]
[ext_resource path="res://scenes/Player/images/RED_HOOD/parts/red hood itch free_wakeup2.png" type="Texture" id=15]
[ext_resource path="res://scenes/Player/scripts/idle.gd" type="Script" id=16]
[ext_resource path="res://scenes/Player/scripts/falling.gd" type="Script" id=17]
[ext_resource path="res://scenes/Player/scripts/jump.gd" type="Script" id=18]
[ext_resource path="res://scenes/Player/scripts/dead.gd" type="Script" id=19]
[ext_resource path="res://scenes/Player/scripts/close_attack.gd" type="Script" id=20]
[ext_resource path="res://scenes/Player/scripts/air_attack.gd" type="Script" id=21]
[ext_resource path="res://scenes/Player/scripts/player.gd" type="Script" id=22]
[ext_resource path="res://scenes/Player/scripts/states.gd" type="Script" id=23]
[ext_resource path="res://scenes/Player/scripts/ranged_attack.gd" type="Script" id=24]
[ext_resource path="res://scenes/Player/scripts/run.gd" type="Script" id=25]
[ext_resource path="res://scenes/Player/scripts/slide.gd" type="Script" id=26]
[ext_resource path="res://scenes/Bloods/scenes/Bloods.tscn" type="PackedScene" id=27]
[ext_resource path="res://scenes/Player/scripts/Gun.gd" type="Script" id=28]
[ext_resource path="res://scenes/Player/scripts/hit.gd" type="Script" id=29]
[ext_resource path="res://scenes/Player/scenes/DistantWeapon.tscn" type="PackedScene" id=30]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.25, 15.75 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 80, 80, 80 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 160, 80, 80 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 240, 80, 80 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 480, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 560, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 640, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 720, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 800, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 880, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 960, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 1040, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 1120, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 1200, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 1280, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 1360, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 480, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 880, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 960, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1040, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 560, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 720, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 800, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 880, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 960, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1040, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1120, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1200, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1280, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1360, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 480, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 560, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 640, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 720, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 800, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 880, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 960, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1040, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1120, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1200, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1280, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1360, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1440, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1520, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1600, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1680, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1760, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1840, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1360, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1440, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1520, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 480, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 560, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=87]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 640, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=88]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 720, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=89]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 800, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=90]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 880, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=91]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 960, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=92]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1040, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=93]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1120, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=94]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1200, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=95]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1280, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=96]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1360, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=97]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1440, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=98]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1520, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=99]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1600, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=100]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1680, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=101]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1760, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=102]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1840, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=103]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=104]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=105]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=106]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=107]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=108]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=109]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 480, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=110]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 560, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=111]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 640, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=112]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=113]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=114]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=115]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=116]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=117]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=118]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=119]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=120]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 480, 0, 80, 80 )

[sub_resource type="SpriteFrames" id=121]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "slide",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "idle",
"speed": 15.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "hit",
"speed": 18.0
}, {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "falling",
"speed": 7.0
}, {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ) ],
"loop": true,
"name": "jump",
"speed": 15.0
}, {
"frames": [ SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ) ],
"loop": true,
"name": "close_attack",
"speed": 25.0
}, {
"frames": [ SubResource( 76 ), SubResource( 77 ), SubResource( 78 ) ],
"loop": true,
"name": "air_attack_close",
"speed": 14.0
}, {
"frames": [ SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ) ],
"loop": true,
"name": "run",
"speed": 30.0
}, {
"frames": [ SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ) ],
"loop": true,
"name": "ranged_attack",
"speed": 20.0
}, {
"frames": [ SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 118 ), SubResource( 120 ) ],
"loop": true,
"name": "heart",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=122]
extents = Vector2( 7.52235, 15.6189 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
position = Vector2( -6, -8 )
collision_mask = 4
script = ExtResource( 22 )

[node name="LeftWall" type="RayCast2D" parent="."]
visible = false
position = Vector2( -4.58512, 2.16912 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 15 )
collision_mask = 4

[node name="RightWall" type="RayCast2D" parent="."]
visible = false
position = Vector2( -1.58512, 2.16912 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 15 )
collision_mask = 4

[node name="current_state" type="Label" parent="."]
margin_left = -11.4264
margin_top = -33.8062
margin_right = 77.574
margin_bottom = -19.806
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.625, 1.25 )
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -3, -1.80157 )
frames = SubResource( 121 )
animation = "idle"
__meta__ = {
"_edit_group_": true
}

[node name="Gun" type="Position2D" parent="Sprite"]
position = Vector2( 11, 1 )
script = ExtResource( 28 )
Bullet = ExtResource( 30 )

[node name="slide_particles" type="CPUParticles2D" parent="Sprite"]
position = Vector2( 9.84444, 5.33936 )
emitting = false
amount = 40
lifetime = 1.5
explosiveness = 0.02
randomness = 0.5
lifetime_randomness = 0.6
emission_shape = 1
emission_sphere_radius = 1.92
direction = Vector2( -3, 1 )
spread = 69.6
gravity = Vector2( -10, -98 )
initial_velocity = 7.19
initial_velocity_random = 0.71
angular_velocity = 41.44
angular_velocity_random = 0.04
scale_amount = 2.0
scale_amount_random = 0.99
color = Color( 0.117647, 0.101961, 0.101961, 1 )

[node name="CloseAttackArea" type="Area2D" parent="Sprite" groups=[
"CloseWeapons",
]]
position = Vector2( -2.00565, 5.30552 )
collision_layer = 8
collision_mask = 2

[node name="Strike1" type="CollisionPolygon2D" parent="Sprite/CloseAttackArea"]
position = Vector2( 4.238, -0.397 )
scale = Vector2( 1.3, 1 )
build_mode = 1
polygon = PoolVector2Array( -10.0208, -16.0351, -6.94036, -18.0374, 9.74514, -16.5357, 13.9807, -12.1974, 19.7564, -2.353, 19.7564, 3.15321, 11.0286, 11.3291, 4.86784, 12.4971, 2.94259, 12.1634, -0.779558, 12.3302, -4.24501, 12.1634, -5.27181, 8.65943, 2.42919, 7.99201, 8.46164, 7.15773, 12.9539, 1.98523, 10.3869, -4.68897, 4.86784, -7.35865, -2.57646, -8.02607, -6.68366, -8.52664 )
disabled = true

[node name="states" type="Node" parent="."]
script = ExtResource( 23 )

[node name="idle" type="Node" parent="states"]
script = ExtResource( 16 )

[node name="dead" type="Node" parent="states"]
script = ExtResource( 19 )

[node name="run" type="Node" parent="states"]
script = ExtResource( 25 )

[node name="jump" type="Node" parent="states"]
script = ExtResource( 18 )

[node name="close_attack" type="Node" parent="states"]
script = ExtResource( 20 )

[node name="ranged_attack" type="Node" parent="states"]
script = ExtResource( 24 )

[node name="slide" type="Node" parent="states"]
script = ExtResource( 26 )

[node name="falling" type="Node" parent="states"]
script = ExtResource( 17 )

[node name="air_attack" type="Node" parent="states"]
script = ExtResource( 21 )

[node name="hit" type="Node" parent="states"]
script = ExtResource( 29 )

[node name="MusicEffects" type="Node" parent="."]

[node name="ArcheryAttack" type="AudioStreamPlayer" parent="MusicEffects"]
stream = ExtResource( 5 )
volume_db = -80.0

[node name="SwordAttack_1" type="AudioStreamPlayer" parent="MusicEffects"]
stream = ExtResource( 12 )
volume_db = -80.0

[node name="SwordAttack_2" type="AudioStreamPlayer" parent="MusicEffects"]
stream = ExtResource( 13 )
volume_db = -80.0

[node name="Running" type="AudioStreamPlayer" parent="MusicEffects"]
stream = ExtResource( 4 )
volume_db = -80.0

[node name="JumpingEnd" type="AudioStreamPlayer" parent="MusicEffects"]
stream = ExtResource( 3 )
volume_db = -80.0
pitch_scale = 2.0

[node name="Sliding" type="AudioStreamPlayer" parent="MusicEffects"]
stream = ExtResource( 11 )
volume_db = -80.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -8 )
offset = Vector2( 0, -100 )
current = true
zoom = Vector2( 0.5, 0.5 )
process_mode = 0
limit_left = 0
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 7.0
offset_h = 1.0
offset_v = 0.48
drag_margin_left = 0.03
drag_margin_right = 0.05

[node name="PlayerArea" type="Area2D" parent="." groups=[
"Player",
]]

[node name="CollisionShapeAreaPlayer" type="CollisionShape2D" parent="PlayerArea"]
position = Vector2( -1.47157, 0.840893 )
shape = SubResource( 122 )

[node name="Bloods" parent="." instance=ExtResource( 27 )]
position = Vector2( -17, -8.589 )
scale = Vector2( 0.5, 0.5 )
blood_offset = [ {
"x": null,
"y": null
}, {
"x": null,
"y": null
} ]
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="area_entered" from="PlayerArea" to="." method="_on_PlayerArea_area_entered"]
